--- a/style.css
+++ b/style.css
@@ -30,3 +30,19 @@ table{
 td,th{
     padding: 10px;
 }
+
+@media (max-width: 988px){
+    html{
+        font-size: 55%;
+    }
+}
+@media (max-width:688px ){
+    html{
+        font-size: 45%;
+    }
+}
+@media (max-width:393px ){
+    html{
+        font-size: 30%;
+    }
+}
